--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 
 
 
-
 <figure id="video_player">
      <video width="320" height="240" autoplay loop>
      <source src="video3.mp4" type="video/mp4" />
@@ -110,17 +109,17 @@
 
 <ul>
      <li><a href="killroom.mp4">
-<img src="bildname7.jpg" alt="7" width="50" height="60"></a>
+<img src="bildname7.jpg" alt=25" width="50" height="60"></a>
      <a href="maximumsecurity2.mp4">
-<img src="bildname8.jpg" alt="8" width="50" height="60"></a>
+<img src="bildname8.jpg" alt="26" width="50" height="60"></a>
      <a href="freddy.mp4">
-<img src="freddy.jpg" alt="9" width="50" height="60"></a>
+<img src="freddy.jpg" alt="27" width="50" height="60"></a>
      <a href="kfz.mp4">
-<img src="kfz.jpg" alt="10" width="50" height="60"></a>
+<img src="kfz.jpg" alt="28" width="50" height="60"></a>
      <a href="koch.mp4">
-<img src="koch.jpg" alt="11" width="50" height="60"></a>
+<img src="koch.jpg" alt="29" width="50" height="60"></a>
      <a href="spiele.mp4">
-<img src="spiele.jpg" alt="12" width="50" height="60"></a></li>
+<img src="spiele.jpg" alt="30" width="50" height="60"></a></li>
      </ul>
 
 
@@ -132,17 +131,17 @@
 
 <ul>
      <li><a href="killroom.mp4">
-<img src="bildname7.jpg" alt="7" width="50" height="60"></a>
+<img src="bildname7.jpg" alt="31" width="50" height="60"></a>
      <a href="maximumsecurity2.mp4">
-<img src="bildname8.jpg" alt="8" width="50" height="60"></a>
+<img src="bildname8.jpg" alt="32" width="50" height="60"></a>
      <a href="freddy.mp4">
-<img src="freddy.jpg" alt="9" width="50" height="60"></a>
+<img src="freddy.jpg" alt="33" width="50" height="60"></a>
      <a href="kfz.mp4">
-<img src="kfz.jpg" alt="10" width="50" height="60"></a>
+<img src="kfz.jpg" alt="34" width="50" height="60"></a>
      <a href="koch.mp4">
-<img src="koch.jpg" alt="11" width="50" height="60"></a>
+<img src="koch.jpg" alt="35" width="50" height="60"></a>
      <a href="spiele.mp4">
-<img src="spiele.jpg" alt="12" width="50" height="60"></a></li>
+<img src="spiele.jpg" alt="36" width="50" height="60"></a></li>
      </ul>
 
 
@@ -154,17 +153,17 @@
 
 <ul>
      <li><a href="killroom.mp4">
-<img src="bildname7.jpg" alt="7" width="50" height="60"></a>
+<img src="bildname7.jpg" alt="37" width="50" height="60"></a>
      <a href="maximumsecurity2.mp4">
-<img src="bildname8.jpg" alt="8" width="50" height="60"></a>
+<img src="bildname8.jpg" alt="38" width="50" height="60"></a>
      <a href="freddy.mp4">
-<img src="freddy.jpg" alt="9" width="50" height="60"></a>
+<img src="freddy.jpg" alt="39" width="50" height="60"></a>
      <a href="kfz.mp4">
-<img src="kfz.jpg" alt="10" width="50" height="60"></a>
+<img src="kfz.jpg" alt="40" width="50" height="60"></a>
      <a href="koch.mp4">
-<img src="koch.jpg" alt="11" width="50" height="60"></a>
+<img src="koch.jpg" alt="41" width="50" height="60"></a>
      <a href="spiele.mp4">
-<img src="spiele.jpg" alt="12" width="50" height="60"></a></li>
+<img src="spiele.jpg" alt="42" width="50" height="60"></a></li>
      </ul>
 
 
@@ -240,9 +239,9 @@ video.play();
 
 
 
-                                                                Visit <a href="https://vitaforas.de"> vitaforas.de</a> here<br />or           
-<a href="https://www.appcreator24.com/app2648348-r4ymif">Download</a> our App</p>
-                                                        </div>
+
+
+                                                                                               </div>
                                                 </div>
                                                 <nav>
                                                         <ul>
