Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@ hotelgast
  <p>
 </p>
 <figure id="video_player">
-     <video width="100%" height="auto" autoplay >                                       <source src="intro2.mp4" type="video/mp4" />
+     <video width="100%" height="auto" autoplay >                                       <source src="https://tv.vitaforas.de/intro2.mp4" type="video/mp4" />
      <source src="intro2.webm" type="video/webm" />
-         <source src="intro2.ogg" type="video/ogg" />                                           Your browser does not support the video tag.
+         <source src="https://tv.vitaforas.de/intro2.ogg" type="video/ogg" />                                           Your browser does not support the video tag.
      </video>
      <figcaption>
 <p>         
@@ -44,7 +44,7 @@ hotelgast
 
 
                                                                </p>
-<img src="white.png"> <p>
+<img src="https://tv.vitaforas.de/white.png"> <p>
 Klick Hier 👇🏻</p>
 
 
@@ -110,30 +110,30 @@ Klick Hier 👇🏻</p>
 
 Empfehlung:
      <ul>
-<li><a href="autonoma.mp4">
-<img src="autonoma.jpg" alt="1" width="100%" height="auto"></a>
+<li><a href="https://tv.vitaforas.de/autonoma.mp4">
+<img src="https://tv.vitaforas.de/autonoma.jpg" alt="1" width="100%" height="auto"></a>
 Automata (2014 ‧ Sci-Fi/Thriller)
 
 Die Menschheit nutzt Roboter, um ihnen das Leben zu vereinfachen. Dabei unterliegen die Roboter klaren Regeln, die besagen, dass niemals Menschen angegriffen werden dürfen. Doch der Versicherungsagent Jacq Vaucan wird von seinem Chef auf einen Fall angesetzt, bei dem Roboter Manipulationen ausgesetzt werden. Dabei trifft er auf einen Roboter, der ein eigenes Bewusstsein entwickelt hat. Die ruhige Existenz der Menschheit ist in Gefahr.
 
 
 
-<li><a href="navi.mp4">
-<img src="navigator.jpg" alt="1" width="100%" height="auto"></a>
+<li><a href="https://tv.vitaforas.de/navi.mp4">
+<img src="https://tv.vitaforas.de/navigator.jpg" alt="1" width="100%" height="auto"></a>
 Der Flug des Navigators (1986 ‧ Sci-Fi/Abenteuer)
 
 Der 12-jährige David verschwindet im Sommer 1978 spurlos und taucht erst acht Jahre später wieder auf, aber er ist während seiner Abwesenheit nicht gealtert. Die NASA vermutet einen Zusammenhang zwischen dem Jungen und einem notgelandeten Ufo. Tatsächlich haben die Außerirdischen ihm Sternenkarten ins Gehirn eingespeichert, mit denen sie nun zu ihrem Heimatplaneten zurückkehren wollen. Die Mitarbeiter der NASA wollen das Mysterium eingehender untersuchen, doch der Junge flieht mit dem Ufo.
-     <li><a href="video1.mp4">
-<img src="futura.jpg" alt="1" width="100%" height="auto"></a>
+     <li><a href="https://tv.vitaforas.de/video1.mp4">
+<img src="https://tv.vitaforas.de/futura.jpg" alt="1" width="100%" height="auto"></a>
 Frys chronische Unpünktlichkeit bringt ihm Ärger ein: Farnsworth ist sauer auf ihn, weil er zu spät zur Arbeit kommt und Leela ist enttäuscht, weil er sie bei ihrem Geburtstagsessen versetzt. Als Wiedergutmachung lädt Fry Leela zu einem Geburtstagsdinner ein. Kurz davor testet Professor Farnsworth dummerweise noch eine Zeitmaschine, die ihn, Fry und Bender bis zum Ende des Universums und immer weiter weg von Frys Verabredung jagt.
      <a href="readyplayerone.mp4">
 <img src="readyplayerone.jpg" alt="2" width="100%" height="auto"></a>
 Im Jahr 2045 steht die ökologisch ausgebeutete Welt am Rande des endgültigen Zusammenbruchs. Doch die Menschen finden Erlösung in dem gigantischen virtuellen Universum Oasis, das der geniale James Halliday entwickelt hat. Als Halliday stirbt, hinterlässt er sein ungeheures Vermögen der ersten Person, die jenes Easter Egg findet, das er in der Oasis versteckt hat. 
-     <a href="matrix.mp4">
-<img src="matrix.jpg" alt="3" width="100%" height="auto"></a>
+     <a href="https://tv.vitaforas.de/matrix.mp4">
+<img src="https://tv.vitaforas.de/matrix.jpg" alt="3" width="100%" height="auto"></a>
 In  Matrix Resurrections, dem 4. Teil der Sci-Fi-Reihe, kehrt Keanu Reeves in die Matrix zurück, jene von Maschinen kontrollierte Welt, welche die Wachowskis 1999 erschufen und zum Kult-Status führten. Thomas Anderson lebt ein normales Leben, arbeitet für eine große Firma und geht regelmäßig zur Therapie, wo sein Therapeut versucht, ihm seine Traumata auszutreiben. Denn Thomas hat Probleme damit, Realität und Fiktion auseinanderzuhalten. Er kann doch nicht wirklich einst als Auserwählter Neo in den Krieg gegen die Maschinen gezogen sein, oder?
-     <a href="Hypnotic.mp4">
-<img src="Hypnotic.jpg" alt="4" width="100%" height="auto"></a>
+     <a href="https://tv.vitaforas.de/Hypnotic.mp4">
+<img src="https://tv.vitaforas.de/Hypnotic.jpg" alt="4" width="100%" height="auto"></a>
 Seit der Entführung seiner Tochter ist die Arbeit Danny Rourkes (Ben Affleck) einzige stabile Säule im Leben. Den Rest haben Schuld, Verzweiflung und Trauer gnadenlos aufgefressen. Als Polizist zu helfen, das geht noch. Als er knietief in seinem jüngstem Fall steckt, kann er die Vergangenheit jedoch nicht davon abhalten, sich in seinen Job einzumischen. Denn bei den Ermittlungen zu einer Serie von Bankrauben stößt er unerwartet auf einen Hinweis zum Verbleib seiner Tochter. Die Spur führt ihn und Diana Cruz (Alice Braga) direkt zu Gangster Dellrayne (William Fichtner). Als sich herausstellt, dass der mehr als nur Banksafes knacken kann, scheint die vermeintliche Realität Risse zu bröckeln. Rourke scheint niemandem mehr trauen zu können und es wird zunehmend schwerer, einen klaren Kopf zu bewahren, um seine Tochter endlich aus den Fängen des Verbrechens befreien und wieder nach Hause holen zu können.
      <a href="JohnnyZ.mp4">
 <img src="z.jpg" alt="5" width="100%" height="auto"></a>
