Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@ In  Matrix Resurrections, dem 4. Teil der Sci-Fi-Reihe, kehrt Keanu Reeves in di
      <a href="https://tv.vitaforas.de/Hypnotic.mp4">
 <img src="https://tv.vitaforas.de/Hypnotic.jpg" alt="4" width="100%" height="auto"></a>
 Seit der Entführung seiner Tochter ist die Arbeit Danny Rourkes (Ben Affleck) einzige stabile Säule im Leben. Den Rest haben Schuld, Verzweiflung und Trauer gnadenlos aufgefressen. Als Polizist zu helfen, das geht noch. Als er knietief in seinem jüngstem Fall steckt, kann er die Vergangenheit jedoch nicht davon abhalten, sich in seinen Job einzumischen. Denn bei den Ermittlungen zu einer Serie von Bankrauben stößt er unerwartet auf einen Hinweis zum Verbleib seiner Tochter. Die Spur führt ihn und Diana Cruz (Alice Braga) direkt zu Gangster Dellrayne (William Fichtner). Als sich herausstellt, dass der mehr als nur Banksafes knacken kann, scheint die vermeintliche Realität Risse zu bröckeln. Rourke scheint niemandem mehr trauen zu können und es wird zunehmend schwerer, einen klaren Kopf zu bewahren, um seine Tochter endlich aus den Fängen des Verbrechens befreien und wieder nach Hause holen zu können.
-     <a href="JohnnyZ.mp4">
-<img src="z.jpg" alt="5" width="100%" height="auto"></a>
+     <a href="https://tv.vitaforas.de/JohnnyZ.mp4">
+<img src="https://tv.vitaforas.de/z.jpg" alt="5" width="100%" height="auto"></a>
 Johnny ist halb Mensch, halb Zombie – ein rares Hybridwesen, das in seinem Blut ein mögliches Heilmittel gegen die weltweit grassierende Untoten-Epidemie tragen könnte. 
-     <a href="alles.mp4">
-<img src="alles.jpg" alt="6" width="100%" height="auto"></a>
+     <a href="https://tv.vitaforas.de/alles.mp4">
+<img src="https://tv.vitaforas.de/alles.jpg" alt="6" width="100%" height="auto"></a>
 Wie alle Menschen wird auch Riley von ihren Emotionen geleitet: Freude, Angst, Wut, Ekel und Traurigkeit leben im Kontrollzentrum von Rileys Verstand, von wo aus sie dem jungen Mädchen Ratschläge erteilen und ihr zur Seite stehen. Doch nach dem Umzug haben Riley und ihre Gefühle Probleme mit dem Leben in der fremden Stadt und es geht turbulent zu in der innerlichen Kommandozentrale ihrer Emotionen. 
      <a href="baymax.mp4">
 <img src="baymax.jpg" alt="7" width="100%" height="auto"></a>
