Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -32,20 +32,13 @@ hotelgast
 
  <p>
 </p>
-<figure id="video_player">
-     <video width="100%" height="auto" autoplay >                                       <source src="https://tv.vitaforas.de/intro2.mp4" type="video/mp4" />
-     <source src="intro2.webm" type="video/webm" />
-         <source src="https://tv.vitaforas.de/intro2.ogg" type="video/ogg" />                                           Your browser does not support the video tag.
-     </video>
-     <figcaption>
+
 <p>         
+                                                              </p>
 
 
-
-
-                                                               </p>
 <img src="https://tv.vitaforas.de/white.png"> <p>
-Klick Hier 👇🏻</p>
+Klick Hier</p>
 
 
 
@@ -126,8 +119,8 @@ Der 12-jährige David verschwindet im Sommer 1978 spurlos und taucht erst acht J
      <li><a href="https://tv.vitaforas.de/video1.mp4">
 <img src="https://tv.vitaforas.de/futura.jpg" alt="1" width="100%" height="auto"></a>
 Frys chronische Unpünktlichkeit bringt ihm Ärger ein: Farnsworth ist sauer auf ihn, weil er zu spät zur Arbeit kommt und Leela ist enttäuscht, weil er sie bei ihrem Geburtstagsessen versetzt. Als Wiedergutmachung lädt Fry Leela zu einem Geburtstagsdinner ein. Kurz davor testet Professor Farnsworth dummerweise noch eine Zeitmaschine, die ihn, Fry und Bender bis zum Ende des Universums und immer weiter weg von Frys Verabredung jagt.
-     <a href="readyplayerone.mp4">
-<img src="readyplayerone.jpg" alt="2" width="100%" height="auto"></a>
+     <a href="https://tv.vitaforas.de/readyplayerone.mp4">
+<img src="https://tv.vitaforas.de/readyplayerone.jpg" alt="2" width="100%" height="auto"></a>
 Im Jahr 2045 steht die ökologisch ausgebeutete Welt am Rande des endgültigen Zusammenbruchs. Doch die Menschen finden Erlösung in dem gigantischen virtuellen Universum Oasis, das der geniale James Halliday entwickelt hat. Als Halliday stirbt, hinterlässt er sein ungeheures Vermögen der ersten Person, die jenes Easter Egg findet, das er in der Oasis versteckt hat. 
      <a href="https://tv.vitaforas.de/matrix.mp4">
 <img src="https://tv.vitaforas.de/matrix.jpg" alt="3" width="100%" height="auto"></a>
@@ -141,10 +134,10 @@ Johnny ist halb Mensch, halb Zombie – ein rares Hybridwesen, das in seinem Blu
      <a href="https://tv.vitaforas.de/alles.mp4">
 <img src="https://tv.vitaforas.de/alles.jpg" alt="6" width="100%" height="auto"></a>
 Wie alle Menschen wird auch Riley von ihren Emotionen geleitet: Freude, Angst, Wut, Ekel und Traurigkeit leben im Kontrollzentrum von Rileys Verstand, von wo aus sie dem jungen Mädchen Ratschläge erteilen und ihr zur Seite stehen. Doch nach dem Umzug haben Riley und ihre Gefühle Probleme mit dem Leben in der fremden Stadt und es geht turbulent zu in der innerlichen Kommandozentrale ihrer Emotionen. 
-     <a href="baymax.mp4">
-<img src="baymax.jpg" alt="7" width="100%" height="auto"></a>
+     <a href="https://tv.vitaforas.de/baymax.mp4">
+<img src="https://tv.vitaforas.de/baymax.jpg" alt="7" width="100%" height="auto"></a>
 In „Baymax – Robowahobu in Serie“ erlebt der 14-jährige Hiro Hamada immer wieder ungeheuerliche Abenteuer. Stets an seiner Seite: der namensgebende Roboter Baymax. 
-     <a href="tribut.mp4">
+     <a href="https://tv.vitaforas.de/tribut.mp4">
 <img src="tribut.jpg" alt="8" width="100%" height="auto"></a>
 Im Mittelpunkt der Geschichte steht der junge Coriolanus (Tom Blyth), lange bevor er zum Präsidenten von Panem werden sollte. Er ist die letzte Hoffnung für seine einst stolze Familie Snow, die in Ungnade gefallen ist. Als er zum Mentor von Lucy (Rachel Zegler), einem Mädchen aus dem verarmten Distrikt 12, erwählt wird, sieht er die Chance, sein Schicksal zu ändern... Wir sahen den Fall von Präsident Snow. Nun wird die Welt Zeuge seines Aufstiegs.
      <a href="Chappie.mp4">
