Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -298,6 +298,8 @@ Das Jahr 2274 wirkt auf den ersten Blick idyllisch - es gibt nur einen Haken: di
 <img src="https://tv.vitaforas.de/here.jpg" alt="2" width="100%" height="auto"></a>
      <a href="https://tv.vitaforas.de/solas.mp4">
 <img src="https://tv.vitaforas.de/solas.jpg" alt="2" width="100%" height="auto"></a>
+     <a href="https://tv.vitaforas.de/bär.mp4">
+<img src="https://tv.vitaforas.de/bär.jpg" alt="10" width="100%" height="auto"></a></li>
      <a href="https://tv.vitaforas.de/ninja.mp4">
 <img src="https://tv.vitaforas.de/ninja.jpg" alt="1" width="100%" height="auto"></a>
      <a href="https://tv.vitaforas.de/John1.mp4">
