--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <img src="https://tv.vitaforas.de/white.png"> <p>
 Klick Hier</p>
-<img src=" src="https://tv.vitaforas.de/unten.png">
+<img src="src="https://tv.vitaforas.de/unten.png">
 
 
 
@@ -151,7 +151,7 @@ Das Waisenmädchen Momo lebt allein mit seiner Schildkröte Kassiopeia in einem 
      <a href="https://tv.vitaforas.de/five.mp4">
 <img src="https://tv.vitaforas.de/five.png" alt="10" width="100%" height="auto"></a></li>
      <a href="https://tv.vitaforas.de/finest.mp4">
-<img src="https://tv.vitaforas.de/mfinest.jpg" alt="10" width="100%" height="auto"></a></li>
+<img src="https://tv.vitaforas.de/finest.jpg" alt="10" width="100%" height="auto"></a></li>
   </ul>
 
 
