Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <img src="https://tv.vitaforas.de/white.png"> <p>
 Klick Hier</p>
-<img src="src="https://tv.vitaforas.de/unten.png">
+<img src="src="unten.png">
 
 
 
