Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@ Momo (1986 ‧ Fantasy/Kinderfilm)
 
 Das Waisenmädchen Momo lebt allein mit seiner Schildkröte Kassiopeia in einem riesigen Amphitheater und hat viele Freunde. Doch eines Tages hat niemand mehr Zeit. Alle sind von der Idee besessen, ungenutzte Zeit für ein längeres Leben zu sparen. Mysteriöse graue Herren mit Aktenkoffern wollen den Menschen mit verklausulierten Verträgen die Zeit stehlen und diese für ihre eigenen Zwecke benutzen. Mit Hilfe ihrer Schildkröte und einer Stundenblume stellt Momo sich den Zeitdieben entgegen.
    
+     <a href="https://tv.vitaforas.de/nuggets.mp4">
+<img src="https://tv.vitaforas.de/nuggets.jpg" alt="48" width="100%" height="auto"></a>
+
      <a href="https://tv.vitaforas.de/five.mp4">
 <img src="https://tv.vitaforas.de/five.png" alt="10" width="100%" height="auto"></a></li>
      <a href="https://tv.vitaforas.de/finest.mp4">
