Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -100,7 +100,12 @@ Klick Hier</p>
 
 Neu:
 <ul>
-     <li><a href="https://tv.vitaforas.de/killroom.mp4">
+     <li>
+<a href="https://tv.vitaforas.de/sawx.mp4">
+<img src="https://tv.vitaforas.de/sawx.jpg" alt="29" width="100%" height="auto"></a>
+Auch wenn Jigsaw beziehungsweise John Kramer nicht mehr zurückkehrt, bleiben wir doch in demselben Universum. Dennoch, der Film hat vielen Fans keine Freude gemacht und deswegen schlägt die Fortsetzung jetzt eine ganz andere Richtung ein: In Form eines Prequels bringt „Saw 10“ Jigsaw jetzt nämlich doch zurück.
+
+<a href="https://tv.vitaforas.de/killroom.mp4">
 <img src="https://tv.vitaforas.de/bildname7.jpg" alt="25" width="100%" height="auto"></a>
      <a href="https://tv.vitaforas.de/fut.mp4">
 <img src="https://tv.vitaforas.de/fut.jpg" alt="26" width="50" height="60"></a>
@@ -117,9 +122,7 @@ Neu:
      <a href="https://tv.vitaforas.de/moonfall4k.mp4">
 <img src="https://tv.vitaforas.de/moonfall4k.jpg" alt="28" width="100%" height="auto"></a>
 In diesem Katastrophenfilm von Roland Emmerich befindet sich der Mond mit seinen knapp 3500 Kilometern Durchmesser auf dem unweigerlichen Kollisionskurs mit der Erde. Die ehemalige Astronautin Jo Fowler (Halle Berry) glaubt als einzige, dass sich die drohende Zerstörung der Erde abwenden lässt. Unterstützung bekommt sie lediglich von Astronaut Brian Harper (Patrick Wilson) und Verschwörungstheoretiker K.C. Houseman (John Bradley). Zu dritt reisen sie in den Weltraum, müssen dort jedoch feststellen, dass der Mond nicht das ist, was die Menschheit immer dachte.
-     <a href="https://tv.vitaforas.de/sawx.mp4">
-<img src="https://tv.vitaforas.de/sawx.jpg" alt="29" width="100%" height="auto"></a>
-Auch wenn Jigsaw beziehungsweise John Kramer nicht mehr zurückkehrt, bleiben wir doch in demselben Universum. Dennoch, der Film hat vielen Fans keine Freude gemacht und deswegen schlägt die Fortsetzung jetzt eine ganz andere Richtung ein: In Form eines Prequels bringt „Saw 10“ Jigsaw jetzt nämlich doch zurück.
+     
      <a href="https://tv.vitaforas.de/stichtag.mp4">
 <img src="https://tv.vitaforas.de/stichtag.jpg" alt="30" width="100%" height="auto"></a></li>
 Unter der Regie von Todd Phillips finden sich Peter Highman (Robert Downey Jr.) und Ethan Tremblay (Zach Galifianakis) zusammen, um einen außergewöhnlichen Road Trip zu absolvieren.
