--- a/index.html
+++ b/index.html
@@ -100,10 +100,12 @@ Klick Hier</p>
 
 Ab 11.01.2024 im Kino / Klich 4 TRAILER:
 <ul>
-<li><a href="trailerBEE.mp4">
-<img src="11.01.2024.jpg" alt="1" width="100%" height="auto"></a>
+<li><a href="https://tv.vitaforas.de/trailerBEE.mp4">
+<img src="https://tv.vitaforas.de/11.01.2024.jpg" alt="1" width="100%" height="auto"></a>
+
 Das neue Jahr startet actionreich.
-<p> </p>  In "The Beekeeper" schlüpft Jason Statham in die Rolle eines unsch>In "The Beekeeper" zeigt sich Jason Statham mal wieder von seiner feinsten S>
+<p> </p> 
+ In "The Beekeeper" schlüpft Jason Statham in die Rolle eines unsch>In "The Beekeeper" zeigt sich Jason Statham mal wieder von seiner feinsten S>
 Jason Statham als unscheinbarer Imker mit Kampfqualitäten
 Der Trailer, der nun auch auf Deutsch erschienen ist, gibt erste Hinweise da>
 
