--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Ab 11.01.2024 im Kino / Klich 4 TRAILER:
 
 Das neue Jahr startet actionreich.
 <p> </p> 
- In "The Beekeeper" schlüpft Jason Statham in die Rolle eines unsch>In "The Beekeeper" zeigt sich Jason Statham mal wieder von seiner feinsten S>
+ In "The Beekeeper" schlüpft Jason Statham in die Rolle eines unscheinbaren Bienenzüchter. In "The Beekeeper" zeigt sich Jason Statham mal wieder von seiner feinsten Seite.
 Jason Statham als unscheinbarer Imker mit Kampfqualitäten
 Der Trailer, der nun auch auf Deutsch erschienen ist, gibt erste Hinweise da>
 
