Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -111,8 +111,13 @@ Der Trailer, der nun auch auf Deutsch erschienen ist, gibt erste Hinweise da>
 
 
 Neu:
+
 <ul>
      <li>
+
+<a href="https://tv.vitaforas.de/bär.mp4">
+<img src="https://tv.vitaforas.de/bär.jpg" alt="2" width="100%" height="auto"></a>
+
 <a href="https://tv.vitaforas.de/sawx.mp4">
 <img src="https://tv.vitaforas.de/sawx.jpg" alt="29" width="100%" height="auto"></a>
 Auch wenn Jigsaw beziehungsweise John Kramer nicht mehr zurückkehrt, bleiben wir doch in demselben Universum. Dennoch, der Film hat vielen Fans keine Freude gemacht und deswegen schlägt die Fortsetzung jetzt eine ganz andere Richtung ein: In Form eines Prequels bringt „Saw 10“ Jigsaw jetzt nämlich doch zurück.
