Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -107,10 +107,15 @@ Das neue Jahr startet actionreich.
 <p> </p> 
  In "The Beekeeper" schlüpft Jason Statham in die Rolle eines unscheinbaren Bienenzüchter. In "The Beekeeper" zeigt sich Jason Statham mal wieder von seiner feinsten Seite.
 Jason Statham als unscheinbarer Imker mit Kampfqualitäten
-Der Trailer, der nun auch auf Deutsch erschienen ist, gibt erste Hinweise da>
+Der Trailer, der nun auch auf Deutsch erschienen ist.
 
+ <p>         
+</p>         
 
 Neu:
+
+ <p>         
+</p>         
 
 <ul>
      <li>
@@ -121,6 +126,10 @@ Neu:
 <a href="https://tv.vitaforas.de/sawx.mp4">
 <img src="https://tv.vitaforas.de/sawx.jpg" alt="29" width="100%" height="auto"></a>
 Auch wenn Jigsaw beziehungsweise John Kramer nicht mehr zurückkehrt, bleiben wir doch in demselben Universum. Dennoch, der Film hat vielen Fans keine Freude gemacht und deswegen schlägt die Fortsetzung jetzt eine ganz andere Richtung ein: In Form eines Prequels bringt „Saw 10“ Jigsaw jetzt nämlich doch zurück.
+
+ <p>         
+</p>         
+
 
 <a href="https://tv.vitaforas.de/nuggets.mp4">
 <img src="https://tv.vitaforas.de/nuggets.jpg" alt="48" width="100%" height="auto"></a>
