Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@ Auch wenn Jigsaw beziehungsweise John Kramer nicht mehr zurückkehrt, bleiben wi
 <a href="https://tv.vitaforas.de/nuggets.mp4">
 <img src="https://tv.vitaforas.de/nuggets.jpg" alt="48" width="100%" height="auto"></a>
 
+     <a href="https://tv.vitaforas.de/cocain.mp4">
+<img src="https://tv.vitaforas.de/cocain.jpg" alt="26" width="100%" height="auto"></a>
+
 <a href="https://tv.vitaforas.de/killroom.mp4">
 <img src="https://tv.vitaforas.de/bildname7.jpg" alt="25" width="100%" height="auto"></a>
      <a href="https://tv.vitaforas.de/fut.mp4">
