Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@ Neu:
 <a href="https://tv.vitaforas.de/bär.mp4">
 <img src="https://tv.vitaforas.de/bär.jpg" alt="2" width="100%" height="auto"></a>
 
+
+ <p>         
+</p>         
+
 <a href="https://tv.vitaforas.de/sawx.mp4">
 <img src="https://tv.vitaforas.de/sawx.jpg" alt="29" width="100%" height="auto"></a>
 Auch wenn Jigsaw beziehungsweise John Kramer nicht mehr zurückkehrt, bleiben wir doch in demselben Universum. Dennoch, der Film hat vielen Fans keine Freude gemacht und deswegen schlägt die Fortsetzung jetzt eine ganz andere Richtung ein: In Form eines Prequels bringt „Saw 10“ Jigsaw jetzt nämlich doch zurück.
@@ -134,27 +138,62 @@ Auch wenn Jigsaw beziehungsweise John Kramer nicht mehr zurückkehrt, bleiben wi
 <a href="https://tv.vitaforas.de/nuggets.mp4">
 <img src="https://tv.vitaforas.de/nuggets.jpg" alt="48" width="100%" height="auto"></a>
 
+ <p>         
+</p>         
+
      <a href="https://tv.vitaforas.de/cocain.mp4">
 <img src="https://tv.vitaforas.de/cocain.jpg" alt="26" width="100%" height="auto"></a>
+1985 stürzt ein randvoll mit Kokain beladenes Flugzeug irgendwo im Nirgendwo über den Wäldern Georgias ab. Sind die mehr als 200 Kilogramm Rauschgift und damit potenziell eine ganze Menge Geld also für immer verloren? Die Eigentümer, eine Handvoll Kriminelle, wollen es eher nicht darauf ankommen lassen und vor Ort lieber auf Nummer sichergehen. Auf der Suche nach dem wertvollen Stoff merken sie jedoch, dass jemand anderes schneller als sie war. Denn fündig geworden ist nämlich ein riesiger Schwarzbär. Und der dreht nun völlig zugedröhnt am Rad. Touristen, ein paar Teenager, Polizisten und auch die Gangster passen auf Koks super ins Beuteschema des monströsen Tieres. Jetzt heißt es nur noch eins: überleben und hoffen, dass die pelzige Kampfmaschine irgendwann von ihrem Trip runterkommt. Doch der Bär ist auf den Geschmack gekommen und will immer mehr von dem weißen Pulver.
+
+Basierend auf wahren Begebenheiten:
+
+
+
+ <p>         
+</p>         
 
 <a href="https://tv.vitaforas.de/killroom.mp4">
 <img src="https://tv.vitaforas.de/bildname7.jpg" alt="25" width="100%" height="auto"></a>
+
+ <p>         
+</p>         
      <a href="https://tv.vitaforas.de/fut.mp4">
 <img src="https://tv.vitaforas.de/fut.jpg" alt="26" width="50" height="60"></a>
+
+ <p>         
+</p>         
      <a href="https://tv.vitaforas.de/f.mp4">
 <img src="https://tv.vitaforas.de/f.jpg" alt="2" width="50" height="60"></a>
+
+ <p>         
+</p>         
      <a href="https://tv.vitaforas.de/here.mp4">
 <img src="https://tv.vitaforas.de/here.jpg" alt="2" width="50" height="60"></a>
+
+ <p>         
+</p>         
      <a href="https://tv.vitaforas.de/solas.mp4">
 <img src="https://tv.vitaforas.de/solas.jpg" alt="2" width="50" height="60"></a>
+
+ <p>         
+</p>         
      <a href="https://tv.vitaforas.de/video3.mp4">
 <img src="https://tv.vitaforas.de/bildname1.jpg" alt="1" width="50" height="60"></a>
+
+ <p>         
+</p>         
      <a href="https://tv.vitaforas.de/fred.mp4">
 <img src="https://tv.vitaforas.de/freddy.jpg" alt="27" width="50" height="60"></a>
+
+ <p>         
+</p>         
      <a href="https://tv.vitaforas.de/moonfall4k.mp4">
 <img src="https://tv.vitaforas.de/moonfall4k.jpg" alt="28" width="100%" height="auto"></a>
 In diesem Katastrophenfilm von Roland Emmerich befindet sich der Mond mit seinen knapp 3500 Kilometern Durchmesser auf dem unweigerlichen Kollisionskurs mit der Erde. Die ehemalige Astronautin Jo Fowler (Halle Berry) glaubt als einzige, dass sich die drohende Zerstörung der Erde abwenden lässt. Unterstützung bekommt sie lediglich von Astronaut Brian Harper (Patrick Wilson) und Verschwörungstheoretiker K.C. Houseman (John Bradley). Zu dritt reisen sie in den Weltraum, müssen dort jedoch feststellen, dass der Mond nicht das ist, was die Menschheit immer dachte.
      
+
+ <p>         
+</p>         
      <a href="https://tv.vitaforas.de/stichtag.mp4">
 <img src="https://tv.vitaforas.de/stichtag.jpg" alt="30" width="100%" height="auto"></a></li>
 Unter der Regie von Todd Phillips finden sich Peter Highman (Robert Downey Jr.) und Ethan Tremblay (Zach Galifianakis) zusammen, um einen außergewöhnlichen Road Trip zu absolvieren.
@@ -164,7 +203,13 @@ Peter blickt der Vaterweihe entgegen. In weniger als einer Woche steht die Niede
 
 
 
+ <p>         
+</p>         
+
 Empfehlung:
+
+ <p>         
+</p>         
      <ul>
 <li><a href="https://tv.vitaforas.de/autonoma.mp4">
 <img src="https://tv.vitaforas.de/autonoma.jpg" alt="1" width="100%" height="auto"></a>
@@ -173,6 +218,9 @@ Automata (2014 ‧ Sci-Fi/Thriller)
 Die Menschheit nutzt Roboter, um ihnen das Leben zu vereinfachen. Dabei unterliegen die Roboter klaren Regeln, die besagen, dass niemals Menschen angegriffen werden dürfen. Doch der Versicherungsagent Jacq Vaucan wird von seinem Chef auf einen Fall angesetzt, bei dem Roboter Manipulationen ausgesetzt werden. Dabei trifft er auf einen Roboter, der ein eigenes Bewusstsein entwickelt hat. Die ruhige Existenz der Menschheit ist in Gefahr.
 
 
+
+ <p>         
+</p>         
 
 <li><a href="https://tv.vitaforas.de/navi.mp4">
 <img src="https://tv.vitaforas.de/navigator.jpg" alt="1" width="100%" height="auto"></a>
