Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@ Basierend auf wahren Begebenheiten:
 </p>         
      <a href="https://tv.vitaforas.de/here.mp4">
 <img src="https://tv.vitaforas.de/here.jpg" alt="2" width="50" height="60"></a>
-
+Musik
  <p>         
 </p>         
      <a href="https://tv.vitaforas.de/solas.mp4">
 <img src="https://tv.vitaforas.de/solas.jpg" alt="2" width="50" height="60"></a>
-
+Musik
  <p>         
 </p>         
      <a href="https://tv.vitaforas.de/video3.mp4">
@@ -250,7 +250,9 @@ Wie alle Menschen wird auch Riley von ihren Emotionen geleitet: Freude, Angst, W
 In „Baymax – Robowahobu in Serie“ erlebt der 14-jährige Hiro Hamada immer wieder ungeheuerliche Abenteuer. Stets an seiner Seite: der namensgebende Roboter Baymax. 
      <a href="https://tv.vitaforas.de/tribut.mp4">
 <img src="https://tv.vitaforas.de/tribut.jpg" alt="8" width="100%" height="auto"></a>
-Im Mittelpunkt der Geschichte steht der junge Coriolanus (Tom Blyth), lange bevor er zum Präsidenten von Panem werden sollte. Er ist die letzte Hoffnung für seine einst stolze Familie Snow, die in Ungnade gefallen ist. Als er zum Mentor von Lucy (Rachel Zegler), einem Mädchen aus dem verarmten Distrikt 12, erwählt wird, sieht er die Chance, sein Schicksal zu ändern... Wir sahen den Fall von Präsident Snow. Nun wird die Welt Zeuge seines Aufstiegs.
+
+Die einst mächtige Familie Snow durchlebt schwere Zeiten und ihr Schicksal hängt maßgeblich davon ab, ob es dem erst 18-jährigen Coriolanus Snow (Tom Blyth) gelingt, seine Konkurrenten zu übertrumpfen und als Mentor dafür zu sorgen, dass sein Tribut die Aufmerksamkeit des Kapitols auf sich zieht. Die Chancen stehen jedoch überaus schlecht, denn Coriolanus hat die Aufgabe bekommen, ausgerechnet Lucy Gray Baird (Rachel Zegler), dem weiblichen Tribut aus dem heruntergekommenen Distrikt 12, als Mentor zur Seite zu stehen – eine absolute Demütigung. Doch das Schicksal sorgt dafür, dass Lucy und Coriolanus untrennbar miteinander verbunden werden. Denn jede Entscheidung, die hier getroffen wird, könnte über Triumph und Misserfolg entscheiden. Es kommt zu einem Kampf an zwei Fronten: Während es in der Arena um Leben und Tod geht, kämpft Coriolanus außerhalb gegen die stetig wachsenden Gefühle für seinen Tribut ... Wir sahen den Fall von Präsident Snow. Nun wird die Welt Zeuge seines Aufstiegs.
+
      <a href="https://tv.vitaforas.de/Chappie.mp4">
 <img src="https://tv.vitaforas.de/chapp.jpg" alt="9" width="100%" height="auto"></a>
 In einer futuristischen Welt, in der Roboter die Polizeiarbeit übernehmen, erreicht ein einsamer Droide eine höhere Ebene künstlicher Intelligenz.
