Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@ video.play();
 
                                                 <!-- Work -->
                                                         <article id="work">
-                                                                <h2 class="major">Support</h2>
+                                                                <h2 class="major">FSK 0</h2>
                                                                 <span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 
 
@@ -626,16 +626,23 @@ Hosted in Germany © by vitaforas
 
                                                 <!-- About -->
                                                         <article id="about">
-                                                                <h2 class="major">Impressum</h2>
+                                                                <h2 class="major">FSK 18</h2>
                                                                 <span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 
 <p>
 </p>
 
+
+ <a href="https://tv.vitaforas.de/scream6.mp4">
+<img src="https://tv.vitaforas.de/scream6.jpg" alt="15" width="100%" height="auto"></a>
+<p>
+</p>
+
+Scream 6
 <p>        
 </p>
 
-
+Sam (Melissa Barrera), Tara (Jenna Ortega), Mindy (Jasmin Savoy Brown) und Chad (Mason Gooding) reicht’s. Nachdem sie das letzte Massaker von Ghostface in Woodsboro überlebt haben, ziehen die vier kurzerhand nach New York. Dort wollen die beiden Geschwisterpaare sozusagen ein neues Leben beginnen und die Kleinstadt zusammen mit den traumatischen Erlebnissen hinter sich lassen. Doch der blutige Killer mit Geistermaske und scharfer Klinge lässt sich offenbar nicht so einfach abschütteln, denn plötzlich taucht er auch im Big Apple auf. Und zwar auf der Straße, in der U-Bahn, im Supermarkt – scheinbar überall nutzt er den Trubel der Großstadt aus, um genauso schnell wieder in den Menschenmengen zu verschwinden, wie er vorher auftauchte. Und obwohl Sam, Tara, Mindy und Chad schon Bekanntschaft mit dem Killer gemacht haben, können sie sich dieses mal nicht auf ihre Erfahrung verlassen. Denn wer auch immer hinter der Maske steckt, hat neue Tricks auf Lager.
 <p>        
 </p>
 
