Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@ Hosted in Germany © by vitaforas
 
 
  <a href="https://tv.vitaforas.de/scream6.mp4">
-<img src="https://tv.vitaforas.de/scream6.jpg" alt="15" width="100%" height="auto"></a>
+<img src="https://tv.vitaforas.de/scream6.png" alt="15" width="100%" height="auto"></a>
 <p>
 </p>
 
